# py-qt

./: LICENSE  README.md  pyproject.toml  tools.py
constants/: colors.py
src/kde-kirigami/abstract-card/: main.qml
src/kde-kirigami/application-window/: main.py  main.qml
src/kde-kirigami/card/: main.py  main.qml
src/kde-kirigami/chips/: main.qml
src/kde-kirigami/dialog/: main.qml
src/kde-kirigami/dialog-menu/: main.qml
src/kde-kirigami/dialog-prompt/: main.qml
src/kde-kirigami/global-drawer-context/: main.qml
src/kde-kirigami/global-drawer-desktop/: main.qml
src/kde-kirigami/global-drawer-header/: main.py  main.qml
src/kde-kirigami/overlay-drawer/: main.qml
src/qt-quick/application-window/: main.qml
src/qt-quick/busy-indicator/: main.py  main.qml
src/qt-quick/button/: main.qml
src/qt-quick/button-group/: main.qml
src/qt-quick/check-box/: main.qml
src/qt-quick/check-delegate/: main.qml
src/qt-quick/column-layout/: main.qml
src/qt-quick/combo-box/: main.qml
src/qt-quick/day-of-week-row/: main.qml
src/qt-quick/delay-button/: main.qml
src/qt-quick/dial/: main.qml
src/qt-quick/dialog/: main.qml
src/qt-quick/drawer/: main.qml
src/qt-quick/frame/: main.qml
src/qt-quick/grid-layout/: main.qml
src/qt-quick/group-box/: main.qml
src/qt-quick/item-delegate/: main.qml
src/qt-quick/layout-item-proxy/: main.qml
src/qt-quick/overlay/: main.qml
src/qt-quick/row-layout/: main.qml
src/qt-quick/stack-layout/: main.qml
src/qt-quick/text-field/: main.qml
src/resources/: br.com.justcode.Qt.desktop  example.desktop  resources.qrc
(+67 files in other folders)
